bug squashed

--- a/CST336/assignments/assignment1/css/style.css
+++ b/CST336/assignments/assignment1/css/style.css
@@ -85,6 +85,7 @@ ul {
 
 #footer {
     background-color: #3F51B5;
+    margin:0
 }
 
 
